--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -123,6 +123,7 @@ ul {
 
 .wider-element.wider-container.wider-box.lower-input {
   height: 4rem;
+  padding: 5px;
 }
 
 .mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) .mat-mdc-form-field-infix {
