--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -1,51 +1,23 @@
-<div *ngIf="activeHamburger" class="center-content padding-standard base-color">
-    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
-        {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
-        id
-        №{{editedMeetingId}}</h2>
-    <div class="burger-line-icons">
-        <div class="burger-line-icons main-card padding-standard"
-            mat-icon-button
-            routerLink="/home">
-            <button mat-icon-button
-                matSuffix><mat-icon>keyboard_backspace</mat-icon></button>
-            <p>Go back</p>
-        </div>
-    </div>
-</div>
-<div *ngIf="!activeHamburger" class="top-items-grid">
-    <div class="back-page-continer padding-left-oversize">
-        <button mat-icon-button matSuffix
-            routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
-    </div>
-    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
-        {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
-        id
-        №{{editedMeetingId}}</h2>
-    <div class="near-button-container gap-20px padding-standard"
-        matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
-        [matTooltipDisabled]="!formDisabled">
-        <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
-        <!-- saveDraft - coming soon -->
-        <button mat-stroked-button (click)="saveAndPublish()"
-            [disabled]="formDisabled">
-            Save & Publish</button>
-    </div>
+
+<div>
+    <app-nav-bar [title]="'Edit Meeting №' + editedMeetingId"
+        [editedMeetingId]="editedMeetingId"
+        [formDisabled]="formDisabled" [meetingError]="meetingError"
+        [showSaveButton]="true"
+        (saveAndPublish)="saveAndPublish()"></app-nav-bar>
 </div>
 <div class="center-content">
     <div class="separator-horizontal" style></div>
 </div>
 
-<div *ngIf="getMeetingError" class="centered-top-container padding-standard">
+<div *ngIf="meetingError" class="centered-top-container padding-standard">
     <mat-icon>warning</mat-icon>
-    <h2>{{getMeetingError}}</h2>
+    <h2>{{meetingError}}</h2>
 </div>
 <div *ngIf="loadingMeeting" class="centered-top-container padding-standard">
     <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="!getMeetingError && !loadingMeeting">
+<div *ngIf="!meetingError && !loadingMeeting">
     <div class="main-container base-container">
         <div>
             <app-new-meeting [editedMeeting]="editedMeeting"
@@ -68,5 +40,4 @@
                 [disabled]="formDisabled">
                 Save & Publish</button>
         </div>
-
     </div>
