--- a/frontend/src/app/meetings-list/meetings-list.component.html
+++ b/frontend/src/app/meetings-list/meetings-list.component.html
@@ -1,10 +1,6 @@
-<div class="header ">
-    <div class="padding-left-oversize">
-        <button mat-icon-button matSuffix
-            routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
-    </div>
-    <div class="padding-small">
-    </div>
+<div>
+    <app-nav-bar [title]="'Meetings list'" [editedMeetingId]="null"
+        [formDisabled]="true" [meetingError]="null"></app-nav-bar>
 </div>
 <div class="separator-horizontal" style></div>
 <div class="padding-small">
