--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
-<!-- <div *ngIf="activeHamburger" class="center-content padding-standard">
-    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
-        {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
+<div *ngIf="activeHamburger" class="center-content padding-standard base-color">
+    <h2 *ngIf="!meetingError && editedMeetingId"
+        class="padding-standard">{{ title }}</h2>
+    <h2 *ngIf="meetingError && editedMeetingId " class="padding-standard">Not
+        found meeting with
         id
         №{{editedMeetingId}}</h2>
     <div class="burger-line-icons">
@@ -19,22 +20,16 @@
         <button mat-icon-button matSuffix
             routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
-    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
-        {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
+    <h2 *ngIf="!meetingError" class="padding-standard">{{ title }}</h2>
+    <h2 *ngIf="meetingError" class="padding-standard">Not found meeting with
         id
         №{{editedMeetingId}}</h2>
-    <div class="near-button-container gap-20px"
+    <div *ngIf="showSaveButton" class="near-button-container gap-20px"
         matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
         [matTooltipDisabled]="!formDisabled">
-        <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
-        <!-- saveDraft - coming soon -->
         <button mat-stroked-button class="padding-standard"
-            (click)="saveAndPublish()"
+            (click)="emitPublish()"
             [disabled]="formDisabled">
             Save & Publish</button>
     </div>
 </div>
-<div class="center-content">
-    <div class="separator-horizontal" style></div>
-</div> -->
