feature#16: added confirm dialog when deleting taks, dialog is  standalone and generic he takes question and function which is executed when confirmed

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -364,6 +364,10 @@ ul {
     align-items: center;
   }
 
+  body.dialog-open {
+    overflow: hidden;
+  }
+
   @media only screen and (max-width:599px) {
     .separator-horizontal {
       width: 100%;
