bugfix#30: fixed 2 bugs: 1) when deleted docs was errror with iterrartion on None type, 2) added poup when chose agenda dialog cannot be open

--- a/frontend/src/app/new-meeting-page/invites/board/board.component.css
+++ b/frontend/src/app/new-meeting-page/invites/board/board.component.css
@@ -1,10 +1,8 @@
 .job-positon {
-    color: grey;
+    color: rgb(66, 66, 66);
     font-size: 13px;
 }
 
 .padding-bottom-10px {
     padding-bottom: 10px;
 }
-
-
