--- a/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -139,7 +139,7 @@
         <div>
           <h3>Documents</h3>
           <p>Documents attached to the meeting</p>
-          <div class="select-buttons-group">
+          <div class>
             <div>
               <ng-container
                 *ngIf="form.get('attachedDocuments')?.value != null">
