--- a/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.css
+++ b/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.css
@@ -36,3 +36,9 @@
     border-bottom: solid;
     border-color: rgba(134, 134, 134, 0.404);
 }
+
+@media only screen and (max-width:599px) {
+    .list-container {
+        padding-left: 5px;
+    }
+}
