--- a/frontend/src/assets/my-style.scss
+++ b/frontend/src/assets/my-style.scss
@@ -18,7 +18,7 @@ $board-meetings-theme: mat.define-light-theme((color: (primary: $my-primary,
   --my-primary-background-color: rgb(255, 255, 255);
   --my-accent-background-color: rgb(194, 208, 255);
   --my-error-background-color: #72682f;
-
+  --my-caption-color: rgb(69, 69, 69);
 }
 
 
