--- a/frontend/src/app/meetings-list/meetings-list.component.html
+++ b/frontend/src/app/meetings-list/meetings-list.component.html
@@ -50,7 +50,8 @@
                         Info </th>
                     <td mat-cell *matCellDef="let element"
                         (click)="meetingInfo(element.id)" class="cell">
-                        <button mat-mini-fab [disabled]="!meetingsNotEmpty">
+                        <button mat-mini-fab [disabled]="!meetingsNotEmpty"
+                            [attr.aria-label]="'More information about meeting id:' + 'element.id' + ', name: ' + element.meetingName">
                             <mat-icon>info_outline</mat-icon>
                         </button>
                     </td>
@@ -60,7 +61,7 @@
                         Delete </th>
                     <td mat-cell *matCellDef="let element" class="cell">
                         <button mat-mini-fab [disabled]="!meetingsNotEmpty"
-                            aria-label="Delete"
+                            [attr.aria-label]="'Delete meeting id:' + 'element.id' + ', name: ' + element.meetingName"
                             (click)="deleteMeeting(element.id)">
                             <mat-icon>delete</mat-icon>
                         </button>
@@ -71,7 +72,7 @@
                         Edit </th>
                     <td mat-cell *matCellDef="let element" class="cell">
                         <button mat-mini-fab [disabled]="!meetingsNotEmpty"
-                            aria-label="Edit"
+                            [attr.aria-label]="'Edit meeting id:' + 'element.id' + ', name: ' + element.meetingName"
                             [routerLink]="['/edit-meeting', element.id]">
                             <mat-icon>edit</mat-icon>
                         </button>
