--- a/frontend/src/app/main-menu/main-menu.component.html
+++ b/frontend/src/app/main-menu/main-menu.component.html
@@ -1,9 +1,9 @@
 <div class="separator-horizontal" style></div>
 <div class="main-container padding-standard">
   <div class="main-menu main-card">
-    <div class="centered-top-container">
+    <div class="center-content">
       <h3>Main Menu</h3>
-      <div class="centered-top-container margin-top-10px">
+      <div class="center-content margin-top-10px">
         <button mat-stroked-button class="margin-top-10px"
           routerLink="/new-meeting">New Meeting</button>
         <button mat-stroked-button class="margin-top-10px"
