--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -1,9 +1,10 @@
 <div>
-  <div class="centered-top-container">
+  <div class="center-content">
     <h3>What is Board Meeting App?</h3>
-    <div class="centered-top-container">
-      <p>is soft to create meetings</p>
-      <button mat-stroked-button class="margin-top-10px" routerLink="/">close</button>
+    <div class="center-content">
+      <p>is software to create meetings</p>
+      <button mat-stroked-button class="margin-top-10px"
+        routerLink="/">close</button>
     </div>
   </div>
 </div>
