--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -10,11 +10,11 @@
     <div class="separator-horizontal" style></div>
 </div>
 
-<div *ngIf="meetingError" class="centered-top-container padding-standard">
+<div *ngIf="meetingError" class="center-content padding-standard">
     <mat-icon>warning</mat-icon>
     <h2>{{meetingError}}</h2>
 </div>
-<div *ngIf="loadingMeeting" class="centered-top-container padding-standard">
+<div *ngIf="loadingMeeting" class="center-content padding-standard">
     <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!meetingError && !loadingMeeting">
