--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -24,7 +24,7 @@
     <h2 *ngIf="meetingError" class="padding-standard">Not found meeting with
         id
         №{{editedMeetingId}}</h2>
-    <div *ngIf="showSaveButton" class="near-button-container gap-20px"
+    <div *ngIf="showSaveButton" class="gap-20px"
         matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
         [matTooltipDisabled]="!formDisabled">
         <button mat-stroked-button class="padding-standard"
