--- a/frontend/src/app/shared/timepicker/timepicker.component.html
+++ b/frontend/src/app/shared/timepicker/timepicker.component.html
@@ -1,3 +1,7 @@
 <mat-form-field class="custom-time-input">
-    <input matInput class="input-time" type="time" placeholder="end time" [(ngModel)]="selectedTime" (change)="timeChange($event)">
+    <input
+        matInput class="input-time"
+        type="time"
+        placeholder="end time" [(ngModel)]="selectedTime"
+        (change)="timeChange($event)">
 </mat-form-field>
