bugfix#31.1: changes in class in page not found

--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,10 +1,7 @@
-<div class="top-items-grid">
-    <div class="padding-left-oversize">
-        <button mat-icon-button matSuffix
-            routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
-    </div>
+<div>
+    <app-nav-bar></app-nav-bar>
 </div>
 <div class="separator-horizontal" style></div>
 <div
-    class="centered-top-container padding-standard"><mat-icon>error</mat-icon><h2>Page
+    class="center-content padding-standard"><mat-icon>error</mat-icon><h2>Page
         not found</h2></div>
