--- a/frontend/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting-page.component.html
@@ -4,11 +4,12 @@
     (saveAndPublish)="saveAndPublish()"></app-nav-bar>
 </div>
 <div class="center-content ">
-  <div class="separator-horizontal" style></div>
+  <div class="separator-horizontal"></div>
 </div>
 <div class="main-container base-container">
   <div>
-    <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
+    <app-new-meeting [editedMeeting]="editedMeeting"
+      (formEmitter)="receiveForm($event)"></app-new-meeting>
   </div>
   <div class="separator-vertical"></div>
   <div class="side-menu">
