bugfix#32: changes in css - changed color of snackbar, added error color snack bar, removed http exeption when meetings list is empty becouse its not a error

--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -11,8 +11,10 @@
 </div>
 
 <div *ngIf="meetingError" class="center-content padding-standard">
-    <mat-icon>warning</mat-icon>
-    <h2>{{meetingError}}</h2>
+    <mat-card class="padding-standard center-content main-card">
+        <mat-icon>warning</mat-icon>
+        <h2>{{meetingError}}</h2>
+    </mat-card>
 </div>
 <div *ngIf="loadingMeeting" class="center-content padding-standard">
     <mat-spinner></mat-spinner>
