--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,10 @@
 <div>
     <app-nav-bar></app-nav-bar>
 </div>
-<div class="separator-horizontal" style></div>
-<div
-    class="center-content padding-standard"><mat-icon>error</mat-icon><h2>Page
-        not found</h2></div>
+<div class="separator-horizontal"></div>
+<div class="my-list-container">
+    <mat-card class="padding-standard center-content main-card">
+        <mat-icon>error</mat-icon><h2>Page
+            not found</h2>
+    </mat-card>
+</div>
