--- a/frontend/src/app/new-meeting-page/invites/invites.component.html
+++ b/frontend/src/app/new-meeting-page/invites/invites.component.html
@@ -1,6 +1,6 @@
 <div class="invites-container">
     <mat-card-content class="main-card main-card">
-        <div class="flex-box-space-right">
+        <div class="flex-box-space">
             <h2 class="padding-standard">Invites</h2>
         </div>
         <div>
