--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -394,10 +394,11 @@ ul {
     .main-menu {
       padding: 25px;
       width: 100%;
-      border-radius: 0px;
+      border-radius: 0px !important;
     }
 
     .main-card {
+      border-radius: 0px;
       width: 100%;
     }
 
