--- a/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -132,8 +132,6 @@
           <div class="select-buttons-group">
             <button mat-stroked-button class="select-buttons-agenda"
               (click)="newAgenda()">Create agenda</button>
-            <input type="file" #chooseFile style="display: none"
-              (change)="onFileSelected($event, FileType.ChooseFile)" />
             <button mat-stroked-button class="select-buttons-agenda"
               disabled="false" (click)="selectAgenda()">Choose
               Agenda</button>
@@ -204,11 +202,13 @@
                 </ul>
               </ng-container>
             </div>
-            <input type="file" #addDocument style="display: none"
+            <input type="file" accept=".pdf,.doc,.docx,.odt,.ods,.odp,.md,.txt,.xtml,.json,.yaml,.log,.epub,.gif.jpg,.png,.bmp,.svg"
+              #addDocument style="display: none"
               (change)="onFileSelected($event, FileType.AddDocument)" />
             <button mat-stroked-button
               (click)="openFilePicker(addDocumentInput)">Add Documents</button>
           </div>
+          <p class="caption">accepted formats: .pdf,.doc,.docx,.odt,.ods,.odp,.md,.txt,.xtml,.json,.yaml,.log,.epub,.gif.jpg,.png,.bmp,.svg</p>
         </div>
       </div>
     </mat-card-content>
